<resources>
    <string name="app_name">Jpeg</string>
    <string name="title">Расположение вашего файла</string>
    <string name="save">Запись</string>
    <string name="start_play">Start Play</string>
    <string name="start_record">Start Record</string>
    <string name="stop_record">Stop Record</string>
    <string-array name="ready">
        <item>неспелый</item>
        <item>слегка неспелый</item>
        <item>спелый</item>
        <item>слегка переспелый</item>
        <item>переспелый</item>
    </string-array>
    <string name="d">0-2</string>
    <string name="c">2-4</string>
    <string name="b">4-10</string>
    <string name="a">>10</string>
    <string name="be">неспелый</string>
    <string name="bd">недоспелый</string>
    <string name="bc">спелый</string>
    <string name="bb">слегка переспелый</string>
    <string name="ba">переспелый</string>
    <string name="ready_string">Спелость</string>
    <string name="size_string">Вес арбуза</string>
    <string name="question">Чем ударяете?</string>
    <string name="type">Сорт арбуза</string>
    <string name="l">Ладонь</string>
    <string name="k">Кулак</string>
</resources>
