<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/type"
        android:imeOptions="flagForceAscii"
        android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
        style="@style/MyEditText"/>

    <TextView
        android:layout_marginTop="40dp"
        android:layout_marginLeft="45dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready_string" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:onClick="onClickRipe"
            android:id="@+id/be"
            android:text="@string/be"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyButton"/>


        <Button
            android:onClick="onClickRipe"
            android:id="@+id/bc"
            android:layout_weight="2"
            android:text="@string/bc"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyButton"/>



        <Button
            android:onClick="onClickRipe"
            android:id="@+id/ba"
            android:text="@string/ba"
            android:layout_weight="2"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyButton"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">
        <Button
            android:onClick="onClickRipe"
            android:id="@+id/bd"
            android:text="@string/bd"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyButton"/>
        <Button
            android:onClick="onClickRipe"
            android:id="@+id/bf"
            android:layout_weight="2"
            android:text="идеальный"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyButton"/>
        <Button
            android:onClick="onClickRipe"
            android:id="@+id/bb"
            android:text="@string/bb"
            android:layout_weight="2"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyButton"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size_string" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:onClick="onClickSize"
            android:id="@+id/d"
            android:text="@string/d"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyButton"/>

        <Button
            android:onClick="onClickSize"
            android:id="@+id/c"
            android:text="@string/c"
            android:layout_weight="2"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyButton"/>
        <Button
            android:onClick="onClickSize"
            android:id="@+id/b"
            android:layout_weight="2"
            android:text="@string/b"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyButton"/>

        <Button
            android:onClick="onClickSize"
            android:id="@+id/a"
            android:text="@string/a"
            android:layout_weight="2"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyButton"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/l"
            android:onClick="onClickHit"
            android:text="@string/l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyButton"/>

        <Button
            android:id="@+id/k"
            android:onClick="onClickHit"
            android:text="@string/k"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyButton"/>
    </LinearLayout>
    <Button
        android:id="@+id/button"
        android:onClick="onClickA"
        android:text="Новый Арбуз"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/MyStButton"/>
    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/write"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:text="@string/start_record"
        android:onClick="onClick"
        style="@style/ButtonMain"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
